Ensure text is black even in dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -68,6 +68,7 @@ h6 {
 .body {
   height: 100vh;
   background-color: white;
+  color: black;
 }
 
 * {
